code inspection tidy up